<resources>
    <string name="app_name">BelajarRetrofit</string>
    <string name="register_activity_title">Register</string>
    <string name="login_activity_title">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_curr_pass">Password Sekarang</string>
    <string name="hint_new_pass">Password Baru</string>
    <string name="hint_fName">Nama Depan</string>
    <string name="hint_lName">Nama Belakang</string>
    <string name="hint_email">Email</string>
    <string name="hint_new_email">Email Baru</string>
    <string name="title_btn_masuk">Masuk</string>
    <string name="title_btn_simpan">Simpan</string>
    <string name="title_btn_register">Daftar</string>
    <string name="tv_name">Nama</string>
    <string name="tv_email">Email</string>
    <string name="tv_toko">Toko</string>

    <string name="nav_profile">Profile</string>
    <string name="nav_home">Toko</string>
    <string name="nav_photos">Barang</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Setting</string>
    <string name="nav_about_us">Tentang</string>
    <string name="nav_logout">Keluar</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="title_ubah_nama">Ubah Nama</string>
    <string name="title_ubah_email">Ubah Email</string>
    <string name="title_ubah_pass">Ubah Password</string>

    <string-array name="nav_item_fragment_titles">
        <item>Toko</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="noDataToko">Anda Tidak Memiliki Toko</string>
    <string name="noDataBarang">Barang Kosong</string>
    <string name="ket_barang">Barang</string>

    <string name="hint_nama_toko">Nama Toko</string>
    <string name="hint_desc_toko">Deskripsi Toko</string>
    <string name="title_btn_hapus_toko">Hapus Toko</string>
    <string name="hint_nama_barang">Nama Barang</string>
    <string name="hint_stok">Stok</string>
    <string name="hint_harga">Harga</string>

    <string name="activity_profile">Profile</string>
    <string name="activity_addToko">Tambah Toko</string>
    <string name="activity_addBarang">Tambah Barang</string>
    <string name="activity_detailToko">Detail Toko</string>
</resources>
