<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.naufalrzld.belajarretrofit.activity.ProfileActivity">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:paddingTop="5dp"/>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_username"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:paddingTop="5dp"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:paddingTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <Button
                android:id="@+id/btnUbahNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/title_ubah_nama"
                android:textColor="@color/colorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <Button
                android:id="@+id/btnUbahEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/title_ubah_email"
                android:textColor="@color/colorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorPrimary">

            <Button
                android:id="@+id/btnUbahPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/title_ubah_pass"
                android:textColor="@color/colorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

        </android.support.v7.widget.CardView>


    </LinearLayout>

</LinearLayout>
