<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/lytChangeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fName"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:fontFamily="sans-serif" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lName"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:fontFamily="sans-serif" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytChangeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_email"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:fontFamily="sans-serif" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilCurrPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCurrPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_curr_pass"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:fontFamily="sans-serif" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_pass"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:fontFamily="sans-serif" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorGreen"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/title_btn_simpan"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textAllCaps="true"/>

    </android.support.v7.widget.CardView>

</LinearLayout>
